k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next16-service
spec:
  selector:
    app: next16
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
